crates/monochange/src/snapshots/monochange__mcp____tests__release_manifest_returns_dry_run_manifest@release_manifest_returns_dry_run_manifest.snap
---
source: crates/monochange/src/mcp.rs
assertion_line: 1437
expression: content_text(&result)
---
{
  "action": "release_manifest",
  "manifest": {
    "changedFiles": [
      "Cargo.toml",
      "changelog.md",
      "crates/app/Cargo.toml",
      "crates/app/changelog.md",
      "crates/core/Cargo.toml",
      "crates/core/changelog.md",
      "crates/core/extra.toml",
      "group.toml"
    ],
    "changelogs": [
      {
        "format": "monochange",
        "notes": {
          "sections": [
            {
              "collapsed": false,
              "entries": [
                "> [!NOTE]\n> *core*\n\n#### add release command"
              ],
              "title": "Minor"
            }
          ],
          "summary": [
            "Grouped release for `sdk`."
          ],
          "title": "1.1.0 ([DATE])"
        },
        "ownerId": "sdk",
        "ownerKind": "group",
        "path": "changelog.md",
        "rendered": "## 1.1.0 ([DATE])\n\nGrouped release for `sdk`.\n\n### Minor\n\n> [!NOTE]\n> *core*\n\n#### add release command"
      },
      {
        "format": "monochange",
        "notes": {
          "sections": [
            {
              "collapsed": false,
              "entries": [
                "- No package-specific changes were recorded; `workflow-app` was updated to 1.1.0 as part of group `sdk`."
              ],
              "title": "Changed"
            }
          ],
          "summary": [],
          "title": "1.1.0 ([DATE])"
        },
        "ownerId": "app",
        "ownerKind": "package",
        "path": "crates/app/changelog.md",
        "rendered": "## 1.1.0 ([DATE])\n\n### Changed\n\n- No package-specific changes were recorded; `workflow-app` was updated to 1.1.0 as part of group `sdk`."
      },
      {
        "format": "monochange",
        "notes": {
          "sections": [
            {
              "collapsed": false,
              "entries": [
                "#### add release command"
              ],
              "title": "Minor"
            }
          ],
          "summary": [],
          "title": "1.1.0 ([DATE])"
        },
        "ownerId": "core",
        "ownerKind": "package",
        "path": "crates/core/changelog.md",
        "rendered": "## 1.1.0 ([DATE])\n\n### Minor\n\n#### add release command"
      }
    ],
    "changesets": [
      {
        "context": {
          "capabilities": {
            "actorProfiles": false,
            "commitWebUrls": false,
            "issueComments": false,
            "relatedIssues": false,
            "reviewRequestLookup": false
          },
          "host": null,
          "introduced": null,
          "lastUpdated": null,
          "provider": "generic_git",
          "relatedIssues": []
        },
        "details": null,
        "path": ".changeset/feature.md",
        "summary": "add release command",
        "targets": [
          {
            "bump": "minor",
            "changeType": "minor",
            "evidenceRefs": [],
            "id": "core",
            "kind": "package",
            "origin": "direct-change"
          }
        ]
      }
    ],
    "command": "release-manifest",
    "deletedChangesets": [],
    "dryRun": true,
    "groupVersion": "1.1.0",
    "packagePublications": [
      {
        "ecosystem": "cargo",
        "mode": "builtin",
        "package": "app",
        "registry": "crates_io",
        "trustedPublishing": {
          "enabled": true,
          "environment": null,
          "repository": null,
          "workflow": null
        },
        "version": "1.1.0"
      },
      {
        "ecosystem": "cargo",
        "mode": "builtin",
        "package": "core",
        "registry": "crates_io",
        "trustedPublishing": {
          "enabled": true,
          "environment": null,
          "repository": null,
          "workflow": null
        },
        "version": "1.1.0"
      }
    ],
    "plan": {
      "compatibilityEvidence": [],
      "decisions": [
        {
          "bump": "minor",
          "package": "cargo:crates/app/Cargo.toml",
          "plannedVersion": "1.1.0",
          "reasons": [
            "depends on `cargo:crates/core/Cargo.toml`",
            "shares version group `sdk`"
          ],
          "trigger": "version-group-synchronization",
          "upstreamSources": [
            "cargo:crates/core/Cargo.toml"
          ]
        },
        {
          "bump": "minor",
          "package": "cargo:crates/core/Cargo.toml",
          "plannedVersion": "1.1.0",
          "reasons": [
            "add release command",
            "shares version group `sdk`"
          ],
          "trigger": "direct-change",
          "upstreamSources": [
            "cargo:crates/core/Cargo.toml"
          ]
        }
      ],
      "groups": [
        {
          "bump": "minor",
          "id": "sdk",
          "members": [
            "cargo:crates/core/Cargo.toml",
            "cargo:crates/app/Cargo.toml"
          ],
          "plannedVersion": "1.1.0"
        }
      ],
      "unresolvedItems": [],
      "warnings": [],
      "workspaceRoot": "."
    },
    "releaseTargets": [
      {
        "id": "sdk",
        "kind": "group",
        "members": [
          "core",
          "app"
        ],
        "release": true,
        "renderedChangelogTitle": "1.1.0 ([DATE])",
        "renderedTitle": "1.1.0 ([DATE])",
        "tag": true,
        "tagName": "v1.1.0",
        "version": "1.1.0",
        "versionFormat": "primary"
      }
    ],
    "releasedPackages": [
      "workflow-app",
      "workflow-core"
    ],
    "version": "1.1.0"
  },
  "ok": true,
  "summary": "Generated dry-run release manifest with 1 release target(s)."
}
