crates/monochange/src/snapshots/monochange__mcp____tests__release_preview_reports_config_errors_when_changesets_are_missing@release_preview_reports_config_errors_when_changesets_are_missing.snap
---
source: crates/monochange/src/mcp.rs
expression: content_text(&result)
---
{
  "action": "release_preview",
  "error": "config error: no markdown changesets found under .changeset",
  "ok": false,
  "root": "[ROOT]
  "summary": "config error: no markdown changesets found under .changeset"
}
