crates/monochange/src/snapshots/monochange__mcp____tests__response@change_writes_markdown_changeset.snap
---
source: crates/monochange/src/mcp.rs
expression: content_text(&result)
---
{
  "action": "change",
  "ok": true,
  "path": "[ROOT]/.changeset/core.md",
  "root": "[ROOT]
  "summary": "Wrote change file [ROOT]/.changeset/core.md"
}
