crates/monochange/src/snapshots/monochange__mcp____tests__validate_reports_config_errors_for_invalid_workspace_fixture@validate_reports_config_errors_for_invalid_workspace_fixture.snap
---
source: crates/monochange/src/mcp.rs
expression: content_text(&result)
---
{
  "action": "validate",
  "error": "config error: [changelog].templates uses unsupported variables: commit_hash",
  "ok": false,
  "root": "[ROOT]
  "summary": "config error: [changelog].templates uses unsupported variables: commit_hash"
}
