crates/monochange/src/snapshots/monochange__mcp____tests__validate_reports_success_for_valid_workspace_fixture@validate_reports_success_for_valid_workspace_fixture.snap
---
source: crates/monochange/src/mcp.rs
expression: content_text(&result)
---
{
  "action": "validate",
  "ok": true,
  "root": "[ROOT]
  "summary": "workspace validation passed"
}
